--- a/source/_posts/这是一篇测试文章.md
+++ b/source/_posts/这是一篇测试文章.md
@@ -2,8 +2,11 @@
 title: 这是一篇测试文章
 date: 2016-09-10 18:49:16
 tags: yuan
+comments: true
 ---
 This is a Doc!
 
 Travis CI Auto Success Hope Last !
+
+ADD 基本配置
 
